--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "node": "0.12.x"
   },
   "dependencies": {
+    "express": "4.9.5",
+    "lodash": "3.6.0",
+    "mongoose": "4.0.3",
+    "node-uuid": "1.4.1"
   },
   "devDependencies": {
     "browser-sync": "^2.9.11",
@@ -25,6 +29,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.2",
     "gulp-sourcemaps": "^1.6.0",
-    "yargs": "^1.3.3"
+    "yargs": "^1.3.3",
+    "gulp-clean": "^3.3.12"
   }
 }
