--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "4.9.5",
     "lodash": "3.6.0",
     "mongoose": "4.0.3",
-    "node-uuid": "1.4.1"
+    "node-uuid": "1.4.1",
+    "moment": "2.9.0",
+    "bcrypt": "0.8.3"
   },
   "devDependencies": {
     "browser-sync": "^2.9.11",
