--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongoose": "4.0.3",
     "node-uuid": "1.4.1",
     "moment": "2.9.0",
-    "bcrypt": "0.8.3"
+    "bcrypt": "0.8.3",
+    "cors": "2.5.0"
   },
   "devDependencies": {
     "browser-sync": "^2.9.11",
@@ -32,6 +33,7 @@
     "gulp-replace": "^0.5.2",
     "gulp-sourcemaps": "^1.6.0",
     "yargs": "^1.3.3",
-    "gulp-clean": "^3.3.12"
+    "gulp-clean": "^3.3.12",
+    "gulp-express":"^3.3.12"
   }
 }
