--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "A Node.js app using MongoDB",
   "repository": {
     "type": "git",
-    "url":  "https://github.com/shawdren/funquiz"
+    "url": "https://github.com/shawdren/funquiz"
   },
   "customHost": [
     "funquiz.org"
@@ -15,13 +15,14 @@
     "node": "0.12.x"
   },
   "dependencies": {
-    "express": "4.9.5",
-    "lodash": "3.6.0",
-    "mongoose": "4.0.3",
-    "node-uuid": "1.4.1",
-    "moment": "2.9.0",
     "bcrypt": "0.8.3",
-    "cors": "2.5.0"
+    "cors": "2.5.0",
+    "express": "4.9.5",
+    "gulp-express": "^0.3.5",
+    "lodash": "3.6.0",
+    "moment": "2.9.0",
+    "mongoose": "4.0.3",
+    "node-uuid": "1.4.1"
   },
   "devDependencies": {
     "browser-sync": "^2.9.11",
@@ -29,11 +30,10 @@
     "gulp-autoprefixer": "^2.3.1",
     "gulp-less": "^3.0.2",
     "gulp-minify-css": "^0.4.4",
+    "gulp-nodemon": "^2.0.4",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.2",
     "gulp-sourcemaps": "^1.6.0",
-    "yargs": "^1.3.3",
-    "gulp-clean": "^3.3.12",
-    "gulp-express":"^3.3.12"
+    "yargs": "1.3.3"
   }
 }
