--- a/package.json
+++ b/package.json
@@ -26,14 +26,20 @@
   },
   "devDependencies": {
     "browser-sync": "^2.9.11",
+    "del": "^2.2.0",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.3.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-csso": "^1.0.1",
     "gulp-less": "^3.0.2",
     "gulp-minify-css": "^0.4.4",
+    "gulp-mobilizer": "0.0.3",
     "gulp-nodemon": "^2.0.4",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.2",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
+    "run-sequence": "^1.1.5",
     "yargs": "1.3.3"
   }
 }
