--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-uuid": "1.4.1"
   },
   "devDependencies": {
+    "body-parser": "^1.14.1",
     "browser-sync": "^2.9.11",
     "del": "^2.2.0",
     "gulp": "^3.8.10",
